Updated NetisHR files

--- a/netishr/system_management.html
+++ b/netishr/system_management.html
@@ -32,7 +32,7 @@
 
 <body>
     <div id="wrapper">
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -391,7 +391,7 @@
                                 <!-- This system management menu items are for system administrator only -->
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
-                                        <h5>System Management</h5>
+                                        <h5>General</h5>
                                         <div class="ibox-tools">
                                         </div>
                                     </div>
@@ -407,18 +407,58 @@
                                         <div><a href="#">Master Data</a>
                                             <div class="small">Master data management</div>
                                         </div>
-                                        <p></p>
-                                        <div><a href="#">Site Management</a>
-                                            <div class="small">Managing sites on this system</div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <!-- This system management menu items are for system administrator only -->
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>Sites</h5>
+                                        <div class="ibox-tools">
                                         </div>
+                                    </div>
+                                    <div class="ibox-content">
                                         <p></p>
-                                        <div><a href="#">License Management</a>
-                                            <div class="small">Managing licenses on this system</div>
+                                        <div><a href="/SiteAdmin/SiteList">Sites</a>
+                                            <div class="small">Manage sites on this system</div>
                                         </div>
                                     </div>
 
                                 </div>
                             </div>
+                            <div class="col-lg-4">
+                                <!-- This system management menu items are for system administrator only -->
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>Licenses</h5>
+                                        <div class="ibox-tools">
+                                        </div>
+                                    </div>
+                                    <div class="ibox-content">
+                                        <p></p>
+                                        <div><a href="/License/LicenseList">Licenses</a>
+                                            <div class="small">Manage licenses</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="/License/LicenseRule">License Rules</a>
+                                            <div class="small">Manage license rules</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="/License/LicenseRuleOption">License Rule Options</a>
+                                            <div class="small">Manage license rule options</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="/License/LicenseType">License Type</a>
+                                            <div class="small">Manage sites on this system</div>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                     <div class="footer">
