Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -459,7 +459,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        <a href="person_information_settings.html">Persons Information</a>
+                                        <a href="administrator_persons_information.html">Persons Information</a>
                                         <div class="small">Information configuration for person information</div>
                                         <p></p>
                                         <a href="uploadpersons.html">Upload Persons</a>
@@ -511,16 +511,20 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="#">Category</a>
+                                        <div><a href="administrator_training_category.html">Category</a>
                                             <div class="small">Settings for categories</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="#">Institution</a>
-                                            <div class="small">Settings for institutions</div>
+                                        <div><a href="administrator_training_courses.html">Courses</a>
+                                            <div class="small">Settings for Courses</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="#">Instructor</a>
-                                            <div class="small">Settings for instructors</div>
+                                        <div><a href="administrator_training_curriculum.html">Curriculums</a>
+                                            <div class="small">Settings for Curriculums</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_training_configuration_settings.html">Configuration Settings</a>
+                                            <div class="small">Settings for Training Configuration</div>
                                         </div>
                                     </div>
                                 </div>
