--- a/netishr/index.html
+++ b/netishr/index.html
@@ -159,10 +159,15 @@
                     <li>
                         <a href="#"><i class="fa fa-edit"></i><span class="nav-label">Training</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="#">Syllabus</a></li>
-                            <li><a href="#">Events</a></li>
-                            <li><a href="#">Individual Development Plan</a></li>
-                            <li><a href="#">Training Plans and Execution</a></li>
+                            <li><a href="training_list.html">Training List</a></li>
+                            <li><a href="training_my.html">My Training</a></li>
+                            <li><a href="#"><span class="nav-label">Administration</span><span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li>
+                                        <a href="training_administration_events.html">Training Events</a>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -373,8 +378,7 @@
 
                 </nav>
             </div>
-            <div class="row  border-bottom white-bg dashboard-header">
-
+            <div class="row border-bottom white-bg dashboard-header">
                 <div class="col-md-3">
                     <div>
                         <h5>Notifications</h5>
@@ -489,7 +493,21 @@
                         </div>
                     </div>
                 </div>
-
+            </div>
+            <div class="row white-bg dashboard-header">
+                <div class="col-md-3">
+                    <div><a href="workflow.html">Approval Requests</a>
+                        <div class="small">List of approval requests</div>
+                    </div>
+                    <p></p>
+                    <div><a href="mycalendar.html">My calendar</a>
+                        <div class="small">See your calendar</div>
+                    </div>
+                    <p></p>
+                    <div><a href="payroll_tax_calculation_details.html">Payslip</a>
+                        <div class="small">See your payslip</div>
+                    </div>
+                </div>
 
             </div>
             <div class="row">
