Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -497,11 +497,7 @@
             <div class="row white-bg dashboard-header">
                 <div class="col-md-3">
                     <div><a href="workflow.html">Approval Requests</a>
-                        <div class="small">List of approval requests</div>
-                    </div>
-                    <p></p>
-                    <div><a href="mycalendar.html">My calendar</a>
-                        <div class="small">See your calendar</div>
+                        <div class="small">You received 3 pending requests</div>
                     </div>
                     <p></p>
                     <div><a href="payroll_tax_calculation_details.html">Payslip</a>
