--- a/netishr/index.html
+++ b/netishr/index.html
@@ -232,6 +232,9 @@
                                     <li>
                                         <a href="payroll_salary_calculation.html">Salary Calculation</a>
                                     </li>
+                                    <li>
+                                        <a href="payroll_payslips.html">Payslips</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
