--- a/netishr/payroll_payslips.html
+++ b/netishr/payroll_payslips.html
@@ -403,8 +403,8 @@
                         <div class="ibox float-e-margins">
                             <div class="ibox-content m-b-sm border-bottom">
 
-                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#superiorpic">Send all</button>
-                                <div class="modal" id="superiorpic">
+                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#sendall">Send all</button>
+                                <div class="modal" id="sendall">
                                     <div class="modal-dialog">
                                         <div class="modal-content animated">
                                             <div class="modal-header">
@@ -529,7 +529,7 @@
                                                         <th data-toggle="true">ID</th>
                                                         <th data-toggle="true">Name/Job Title</th>
                                                         <th data-toggle="true">Month/Year</th>
-                                                        <th data-toggle="true">Published</th>
+                                                        <th data-toggle="true">Status</th>
                                                         <th class="text-right"></th>
                                                     </tr>
                                                 </thead>
@@ -539,7 +539,10 @@
                                                         <td>Tono Sutono
                                                             <br><small>Analyst</small></td>
                                                         <td>December 2016</td>
-                                                        <td>16:35, December 26, 2016</td>
+                                                        <td><span class="label label-primary">Published</span>16:35, December 26, 2016
+                                                            <br>
+                                                            <span class="label label-info">Sent</span>17:15, December 26, 2016
+                                                        </td>
                                                         <td>
                                                             <td>
                                                                 <div class="btn-group">
@@ -551,11 +554,14 @@
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td>201301010001</td>
+                                                        <td>201402010001</td>
                                                         <td>Nana Sutana
                                                             <br><small>Senior Consultant</small></td>
                                                         <td>December 2016</td>
-                                                        <td>16:35, December 26, 2016</td>
+                                                        <td><span class="label label-primary">Published</span>16:35, December 26, 2016
+                                                            <br>
+                                                            <span class="label label-info">Sent</span>12:35, December 27, 2016
+                                                        </td>
                                                         <td>
                                                             <td>
                                                                 <div class="btn-group">
