--- a/netishr/payroll_salary_calculation_details.html
+++ b/netishr/payroll_salary_calculation_details.html
@@ -41,7 +41,7 @@
 
 <body>
     <div id="wrapper">
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -412,8 +412,8 @@
 
                                         <h1>
                                         Ann Smith
-                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Calculate</button>
-                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Download payslip</button>
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#calculate">Calculate salary</button>
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#publish">Publish payslip</button>
                                     </h1>
 
                                         <small class="text-muted">ID: 201301011234 | Job title: Finance Manager | Tax ID: 1234567 | Martial status: Not married | No. of children: 0</small>
