--- a/netishr/payroll_salary_calculation_details.html
+++ b/netishr/payroll_salary_calculation_details.html
@@ -376,7 +376,7 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Salary Calculation Details (Payslip)</h2>
+                            <h2>Salary Calculation Details</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
