--- a/netishr/workflow.html
+++ b/netishr/workflow.html
@@ -27,7 +27,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -396,7 +396,39 @@
 
                                 </div>
 
-                                <a href="" class="btn btn-primary btn-xs">Create new request</a>
+                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjobrole">New Request</button>
+                                <div class="modal" id="newjobrole">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content animated">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                <i class="fa fa-laptop modal-icon"></i>
+                                                <h4 class="modal-title">Request Type</h4>
+                                                <small class="font-bold">Please select request type.</small>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="form-group">
+                                                    <div class="row">
+                                                        <label class="col-sm-3 control-label">Request type: </label>
+                                                        <div class="col-sm-9">
+                                                            <div>
+                                                                <select data-placeholder="Choose a person..." class="chosen-select">
+                                                                    <option value="1">Leave</option>
+                                                                    <option value="2">Attendance</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                                                <button type="button" class="btn btn-primary">Select</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
 
 
                                 <div class="row m-b-sm m-t-sm">
@@ -837,22 +869,6 @@
                         </div>
                         <div id="tab-2" class="tab-pane active">
                             <div class="panel-body">
-
-                                <div class="form-group">
-                                    <!-- Select whether this coaching is for KPI, competency or overall -->
-                                    <label class="control-label">Show:&nbsp;</label>
-
-                                    <div data-toggle="buttons" class="btn-group">
-                                        <label class="btn btn-sm btn-white">
-                                            <input type="radio" id="option1" name="options">Incoming</label>
-                                        <label class="btn btn-sm btn-white">
-                                            <input type="radio" id="option2" name="options">Outgoing</label>
-                                        <label class="btn btn-sm btn-white active">
-                                            <input type="radio" id="option3" name="options">All</label>
-                                    </div>
-
-
-                                </div>
 
                                 <div class="row m-b-sm m-t-sm">
                                     <div class="col-md-1">
