Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -556,7 +556,7 @@
                                     </div>
                                     <div class="ibox-content">
                                         <div><a href="administrator_remuneration_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
+                                            <div class="small">Various settings for Renumeration</div>
                                         </div>
                                         <p></p>
                                         <div><a href="administrator_remuneration_payitems.html">Pay Items</a>
@@ -585,6 +585,10 @@
                                         <p></p>
                                         <div><a href="uploadpayrollassignment.html">Upload Payroll Assignment</a>
                                             <div class="small">Upload Payroll Assignment</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_leave_configuration.html">Leave Configuration</a>
+                                            <div class="small">Leave Configuration</div>
                                         </div>
                                     </div>
                                 </div>
