--- a/netishr/administrator_training_curriculum.html
+++ b/netishr/administrator_training_curriculum.html
@@ -405,82 +405,14 @@
                                 <div class="row">
                                     <div class="col-sm-8">
                                         <div class="form-group">
-                                            <label class="control-label" for="status">Select a job title: </label>
+                                            <label class="control-label" for="status">Select a Competency: </label>
 
                                             <div class="input-group">
-                                                <select data-placeholder="Choose a job title..." class="chosen-select input-sm form-control" tabindex="2">
-                                                    <option value="1">DIR-BR Director of Business Development</option>
-                                                    <option selected value="2">DIR-FIN Director of Finance</option>
-                                                    <option value="3">DIR-HR Director of HR</option>
+                                                <select data-placeholder="Choose a Competency..." class="chosen-select input-sm form-control" tabindex="2">
+                                                    <option value="1">Leadership Skill</option>
+                                                    <option selected value="2">Finance Skill</option>
+                                                    <option value="3">Marketing Skill</option>
                                                 </select>
-                                                <span class="input-group-btn">
-                                                    <button type="button" class="btn btn-sm btn-white" data-toggle="modal" data-target="#searchjobtitle">Browse</button>
-                                                </span>
-                                                <div class="modal" id="searchjobtitle">
-                                                    <div class="modal-dialog">
-                                                        <div class="modal-content animated">
-                                                            <div class="modal-header">
-                                                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                                <h4 class="modal-title">Browse for job title</h4>
-                                                            </div>
-                                                            <div class="modal-body">
-                                                                <div class="row">
-                                                                    <div class="col-sm-3">
-                                                                        Job level
-                                                                    </div>
-                                                                    <div class="col-sm-9">
-                                                                        <select data-placeholder="Choose a job level..." class="chosen-select" tabindex="2">
-                                                                            <option value="1">01-EXE EXECUTIVE </option>
-                                                                            <option value="2"> 02-DIR DIREKTORAT</option>
-                                                                            <option value="3">03-DIV DIVISI</option>
-                                                                            <option value="3" selected>04-DEPT DEPARTMENT</option>
-                                                                            <option value="3">05-SEC SECTION</option>
-                                                                            <option value="3">06-STAFF STAFF</option>
-                                                                        </select>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="row">
-                                                                    <div class="col-sm-3">
-                                                                        Job sub-level
-                                                                    </div>
-                                                                    <div class="col-sm-9">
-                                                                        <select data-placeholder="Choose a job sub-level..." class="chosen-select" tabindex="2">
-                                                                            <option value="1">DEPT-HC Department Human Capital</option>
-                                                                            <option value="2">DEPT-FA Department Finance Accounting</option>
-                                                                            <option value="3" selected>DEPT-TECH Department Technology</option>
-                                                                            <option value="3">DEPT-ACC Department Accounting</option>
-                                                                        </select>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="row">
-                                                                    <div class="col-sm-3">
-                                                                        Job title
-                                                                    </div>
-                                                                    <div class="col-sm-9">
-                                                                        <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
-                                                                            <option value="1">MGR-BR Manager of Business Development</option>
-                                                                            <option selected value="2">MGR-FIN Manager of Finance</option>
-                                                                            <option value="3">MGR-HR Manager of HR</option>
-                                                                        </select>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
-                                                                <button type="button" class="btn btn-primary">Select</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div>
-                                                <!-- When a job title is selected above, show its description below -->
-                                                <div>
-                                                    Job level: 02-DIR DIREKTORAT &nbsp;&nbsp; Job sub-level: 02-DIR-FIN Direktorat Finance
-                                                </div>
-
-
                                             </div>
 
                                         </div>
