--- a/netishr/index.html
+++ b/netishr/index.html
@@ -205,6 +205,9 @@
                                         </ul>
                                     </li>
                                     <li>
+                                        <a href="leave.html">Leave</a>
+                                    </li>
+                                    <li>
                                         <a href="#">Benefits <span class="fa arrow"></span></a>
                                         <ul class="nav nav-fourth-level">
                                             <li>
