--- a/netishr/mycalendar.html
+++ b/netishr/mycalendar.html
@@ -425,68 +425,65 @@
 
                                     Apply:
                                     <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#applyleave">Leave</button>
-                                    <div class="modal inmodal" id="applyleave" tabindex="-1" role="dialog" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content animated bounceInRight">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                    <i class="fa fa-laptop modal-icon"></i>
-                                                    <h4 class="modal-title">Leave application</h4>
-                                                    <small class="font-bold">Please enter leave details.</small>
-                                                </div>
-                                                <div class="modal-body">
+                                                <div class="modal inmodal" id="applyleave" tabindex="-1" role="dialog" aria-hidden="true">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content animated bounceInRight">
+                                                            <div class="modal-header">
+                                                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                                <i class="fa fa-laptop modal-icon"></i>
+                                                                <h4 class="modal-title">Leave Request</h4>
+                                                                <small class="font-bold">Please fill Leave request from</small>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <div class="row">
+                                                                    <div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label pull-left">Type</label>
+                                                                            <select class="chosen-select" data-live-search="true">
+                                                                                <option>Annual Leave</option>
+                                                                                <option>Special Leave</option>
+                                                                                <option>Unpaid Leave</option>
+                                                                                <option>Overtime Leave</option>
+                                                                            </select>
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label pull-left">Developer Notes: akan ada informasi tambahan tergantung tipe cuti yang dipilih apa
+                                                                                <br>
+                                                                                Annual leave : sisa cuti, hutang cuti, dsb
+                                                                                Unpaid Leave : sub pilihan Unpaid leave
+                                                                                Special Leave : sub pilihan special leave
+                                                                                Overtime Leave : sisa cuti overtime
+                                                                            </label>
 
-                                                    <div class="row">
-                                                        <div class="form-group">
-                                                            <label class="col-sm-2">Type:</label>
-                                                            <div class="col-sm-8">
-                                                                <select data-placeholder="Choose type..." class="chosen-select" tabindex="2">
-                                                                    <option value="1">Annual paid leave</option>
-                                                                    <option value="2">Unpaid leave</option>
-                                                                </select>
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label pull-left">Start Date</label>
+                                                                                    <div class="input-group date">
+                                                                                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                                                                        <input id="date_added" type="text" class="form-control pull-right" value="03/04/2014">
+                                                                                    </div>
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label pull-left">End Date</label>
+                                                                                    <div class="input-group date">
+                                                                                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                                                                        <input id="date_added" type="text" class="form-control pull-right" value="03/04/2014">
+                                                                                    </div>
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label pull-left">Description</label>
+                                                                            <input type="text" class="form-control pull-right" value="Perpanjangan cuti pegawai terkait" />
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                <button type="button" class="btn btn-primary">Submit</button>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="row">
-                                                        <div class="form-group" id="absencedates">
-                                                            <label class="col-sm-2">
-                                                                Period:</label>
-                                                            <div class="col-sm-8 input-daterange input-group" id="datepicker">
-                                                                <input type="text" class="input-sm form-control" name="start" value="11/14/2016" />
-                                                                <span class="input-group-addon">to</span>
-                                                                <input type="text" class="input-sm form-control" name="end" value="11/14/2016" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="row">
-                                                        <label class="col-sm-2 control-label">Evidence file: </label>
-                                                        <div class="fileinput fileinput-new input-group" data-provides="fileinput">
-                                                            <div class="form-control" data-trigger="fileinput"><i class="glyphicon glyphicon-filefileinput-exists"></i> <span class="fileinput-filename"></span></div>
-                                                            <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select file</span><span class="fileinput-exists">Change</span>
-                                                            <input type="file" name="...">
-                                                            </span>
-                                                            <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row">
-
-                                                        <div class="form-group">
-                                                            <label class="col-sm-2">Description: </label>
-                                                            <div class="col-sm-8">
-                                                                <input type="text" class="form-control">
-                                                            </div>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                                </div>   
 
                                     <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#applyovertime">Overtime</button>
                                     <div class="modal inmodal" id="applyovertime" tabindex="-1" role="dialog" aria-hidden="true">
